--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,22 @@ services:
     networks:
       - secnet
 
+  tshark:
+    build:
+      context: ./Tshark
+      dockerfile: Dockerfile
+    container_name: tshark
+    volumes:
+      - ./results:/app/results
+    working_dir: /app
+    entrypoint: ["python3", "capture_tshark.py"]
+    networks:
+      - secnet
+    cap_add:
+      - NET_RAW
+      - NET_ADMIN
+    network_mode: "host"
+
 networks:
   secnet:
     driver: bridge
