--- a/Tshark/Dockerfile
+++ b/Tshark/Dockerfile
@@ -1,16 +1,15 @@
-FROM ubuntu:22.04
+FROM python:3.11-slim
 
-# Installer tshark et Python
+# Installer tshark (et ses dépendances nécessaires)
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y tshark python3 python3-pip && \
+    apt-get install -y tshark libcap2-bin && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copier le script Python dans le conteneur (si tu en as un)
+# Ajouter le script
 COPY capture_tshark.py /app/capture_tshark.py
-
 WORKDIR /app
 
-# Rendre tshark utilisable sans interaction (autoriser capture)
+# Autoriser dumpcap sans sudo
 RUN setcap cap_net_raw,cap_net_admin=eip $(which dumpcap)
 
 ENTRYPOINT ["python3", "capture_tshark.py"]
