--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - ./results:/app/results
     working_dir: /app
-    entrypoint: ""
+    entrypoint: ["python3", "capture_tshark.py"]
     cap_add:
       - NET_RAW
       - NET_ADMIN
